# ticket_python_flask

./: Dockerfile  Makefile  docker-compose.debug.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
migrations/versions/: 5d493c0ad766_initial_migration.py
scripts/: run-dev.sh  run-ssh.sh
tests/: test_ticket_python_flask.py
ticket_python_flask/: __init__.py  config.py  models.py
