[tool.poetry]
name = "ticket_python_flask"
version = "0.1.0"
description = ""
authors = ["antiny <tranminhan.work@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
psycopg2-binary = "^2.9.1"
Flask-SQLAlchemy = "^2.5.1"
python-dotenv = "^0.19.0"
Flask-Migrate = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
